SphereSim 2.2.3:
* Improved Calculator performance.
* Added basic sphere collision detection, very slow.

SphereSim 2.2.2:
* Added changelog.
* Made FrameBuffer increase read index when full.
* Added methods to let Server sort spheres in cells.