@@ -29,6 +29,7 @@ set(HEADERS ${HEADERS}
 	${PROJECT_INCLUDE_DIR}/SimulatedSystem.hpp
 	${PROJECT_INCLUDE_DIR}/SimulationWorker.hpp
 	${PROJECT_INCLUDE_DIR}/WorkQueue.hpp
+	${PROJECT_INCLUDE_DIR}/TwoDimArray.hpp
 )
 
 add_executable(SphereSim_Server ${SOURCES} ${HEADERS})
